# napari-brushsettings

./: LICENSE  README.md  mkdocs.yml  setup.cfg  tox.ini
docs/: index.md
napari_brushsettings/: _dock_widget.py
napari_brushsettings/_tests/: test_dock_widget.py
