[metadata]
name = napari-brushsettings
version = 0.0.2
author = Philipp Schoennenbeck
author_email = p.schoennenbeck@fz-juelich.de
url = https://github.com/Croxa/napari-brushsettings
license = BSD-3-Clause
description = A simple plugin to set the brush settings for segmentation in napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/Croxa/napari-brushsettings/issues
    Documentation = https://github.com/Croxa/napari-brushsettings#README.md
    Source Code = https://github.com/Croxa/napari-brushsettings
    User Support = https://github.com/Croxa/napari-brushsettings/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-brushsettings = napari_brushsettings
